Переделан проект. Ранее в качестве СУБД использзовалась MSSQL, теперь же используется MySQL

--- a/MySite/Web.config
+++ b/MySite/Web.config
@@ -77,7 +77,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SiteDbEntities" connectionString="metadata=res://*/Models.Site.csdl|res://*/Models.Site.ssdl|res://*/Models.Site.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SiteDb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SiteDbEntities" connectionString="metadata=res://*/Models.Site.csdl|res://*/Models.Site.ssdl|res://*/Models.Site.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SiteDb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="MySite.Properties.Settings.connString" connectionString="server=localhost;user=root;database=mysite;port=3306;password=adil151099;" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
